Update LaTeX header for final submission.
Following instructions:
 * I took https://srm.eg.org/SRM_TPCG2011/templates/latex.zip --- no changes since the version I used.
 * I looked in EGauthorGuidelines-TPCG11-fin.tex --- the only change is to use \WsPaper. Done.
 * Also, checked that my \author is Ok.

git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@9475 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -6,8 +6,7 @@
 
 \documentclass{egpubl}
 \usepackage{EGUKTPCG11}
-\WsSubmission
-% TODO: \WsPaper for final?
+\WsPaper
 \electronicVersion
 
 % for including postscript figures
