Mention in header that this is accepted, as is copyright by EG.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@9476 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -1,6 +1,6 @@
 % "Compositing shaders in X3D" by Michalis Kamburelis,
-% for TPCG 2011.
-% If accepted, this will be Copyright 2011 by EUROGRAPHICS, details later.
+% accepted for TPCG 2011.
+% Copyright 2011 by The Eurographics Association.
 
 %% Template stuff begins here ------------------------------------------------
 
