--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -557,11 +557,11 @@ inside the shader code.
 However, the implementation may need to know the full declaration
 of a plug function, to make a forward or external declaration of it.
 One way to overcome this problem was to require repeating this declaration
-in another field. Another solution was to split shader code into much more
+in another field. Another solution was to split shader code into more
 parts (for example, one part declares the uniform variables, one part declares
 the plug function, one part defines the function body and so on).
 Both approaches seemed uncomfortable for authors
-and they didn't really offer much simpler implementation, so we dropped this idea.
+and they didn't really offer a simpler implementation, so we dropped this idea.
 The current approach, to find the declarations of \texttt{PLUG\_xxx} functions
 inside a complete shader code, is easy to implement and results in clean
 shader code of the effects. It also allows us to naturally use
