Simplify, just multi-texturing, not (multi-)texturing.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@9484 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -1075,7 +1075,7 @@ We would like to emphasize that all the effects demonstrated here
 are theoretically already possible to implement using the standard
 X3D \textit{Programmable shaders component} \cite{x3d:shaders}. However, such implementation
 would be extremely cumbersome.
-You would first have to implement all the necessary (multi-)texturing, lighting,
+You would first have to implement all the necessary multi-texturing, lighting,
 shadows, and other rendering features in a shader code.
 This is a large work if we consider all the X3D rendering options.
 Also note that a shader should remain optimized for a particular setting.
